# voice-tool

./: .env.example  .env.local.example  .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEEPGRAM_TESTING.md  LICENSE  MIGRATION_TAURI_SPEC.md  Makefile  README.md  SECURITY.md  STORIES.md  TODO.md  Voice Tool (Background).bat  Voice Tool (Console).bat  build-signed.ps1  config.json  gui_tkinter.py  index.html  main.py  make-release.ps1  mini.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release.ps1  requirements.txt  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  user_settings.template.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/scripts/: bump-version.sh  generate-releases-json.js  package.json  pnpm-lock.yaml  scan-secrets-in-bundles.mjs
.github/workflows/: ci.yml  release.yml  secret-scan.yml  security-audit.yml
app/: globals.css
docs/: BACKLOG.md  IDEES_AMELIORATION_2026-04-17.md  INVESTIGATION.md  REFACTOR_FRONTEND_PROGRESS.md  UPDATER_SETUP.md  releases.json
docs/research/: CROSS_PLATFORM_MIGRATION.md  realtime-voice-clone-translation.md  whisper-initial-prompt.md
docs/v3/: 00-threat-model-implementation-matrix.md  00-threat-model.md  01-auth-e2e-checklist.md  01-auth.md  02-sync-settings-e2e-checklist.md  02-sync-settings.md  03-account-deletion-e2e-checklist.md  03-sync-notes.md  04-billing.md  05-managed-transcription-e2e-checklist.md  05-managed-transcription.md  06-onboarding-intro-tour.md  06-onboarding.md  EPIC.md  GA-READINESS-2026-05-01.md  README.md
emails/: COMPATIBILITY.md  DEPLOY_SUPABASE.md  README.md  build.tsx  tsconfig.json
emails/__tests__/: build.test.ts  templates.test.tsx  tokens.test.ts
emails/components/: EmailButton.tsx  EmailFooter.tsx  EmailHeader.tsx  EmailHeading.tsx  EmailLayout.tsx  EmailSecurityNote.tsx  EmailText.tsx  tokens.ts
emails/templates/: MagicLink.tsx  PasswordReset.tsx  SignupConfirmation.tsx
old/: .gitignore  CLAUDE.md  Makefile  README.md  gui.py  gui_test.py  gui_tkinter.py  requirements.txt  user_settings.template.json
old/voice_tool/: config_manager.py  formatting.py  history.py
packaging/pyinstaller/: voice_tool.spec
scripts/: build-signed.ps1  generate-pwned-list.ts  make-release.ps1  release.ps1
specs/: plan_production.md
src/: App.css  App.tsx  i18n.ts  main.tsx  mini-window.tsx
src-tauri/: Cargo.toml  private.key.pub  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mini.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_trim.rs  auth.rs  chat.rs  cloud.rs  deepgram_streaming.rs  deepgram_types.rs  folders.rs  hotkeys.rs  lib.rs  logging.rs  logs.rs  main.rs  notes.rs  profiles.rs  state.rs  sync.rs  transcription.rs  transcription_local.rs  transcriptions.rs  tray.rs  updater.rs  window.rs
src-tauri/src/commands/: ai.rs  files.rs  misc.rs  mod.rs  model.rs  profiles.rs  recording.rs  reset.rs  settings.rs  system.rs  transcription.rs  window.rs
src/components/: Dashboard.tsx  OnboardingWizard.tsx  SelectedModelMissingBanner.tsx  SyncStatusIndicator.tsx  ai-action-menu.tsx  api-config-dialog.tsx  audio-visualizer.tsx  dashboard-header.tsx  dashboard.tsx  logs-tab.tsx  notes-editor.tsx  notes-tab.tsx  recording-card.tsx  setting-tabs.tsx  transcription-details.tsx  transcription-list.tsx  transcription-live.tsx  update-modal.tsx  updater-tab.tsx
src/contexts/: AuthContext.tsx  CloudContext.tsx  ProfilesContext.tsx  SettingsContext.tsx  SyncContext.tsx  UpdaterContext.tsx
src/hooks/: useAiAssistant.ts  useAiProcess.ts  useAppLogs.ts  useAudioDevices.ts  useAudioLevelHistory.ts  useAutostart.ts  useBacklinks.ts  useCloud.ts  useCopyToClipboard.ts  useDeepgramStreaming.ts  useFolders.ts  useHotkeyConfig.ts  useIsCompactLayout.ts  useLinkEditor.ts  useMiniWindowSize.ts  useMiniWindowState.ts  useModelDownload.ts  useNotes.ts  useNotesEditorInstance.ts  useNotesWindow.ts  useNotesWorkflow.ts  useOnboardingCheck.ts  useRecordingWorkflow.ts  useSettings.ts  useSidebarCollapseState.ts  useSoundEffects.ts  useStatistics.ts  useSync.ts  useTranscriptionHistory.test.ts  useTranscriptionHistory.ts  useUpdater.ts  useUsage.ts
src/lib/: ai-prompts.ts  date-format.ts  disposable-domains.ts  email-normalize.test.ts  email-normalize.ts  flog.ts  pwned-passwords-list.ts  pwned-passwords.test.ts  settings.ts  (+6 more)
supabase/: config.toml
todos/: priorites.md
voice_tool/: __init__.py  config_manager.py  env_setup.py  history.py  lock.py  paths.py  settings.py  sounds.py  splash.py  transcription.py
(+290 files in other folders)
