[package]
name = "voice-tool"
version = "2.0.1"
description = "Transform your voice in text in real-time using AI models."
authors = ["Yohann JAFFRES <contact@yohann-jaffres.fr>"]
edition = "2024"
documentation = "https://github.com/yohannjaffres/voice-tool"
repository = "https://github.com/yohannjaffres/voice-tool"
keywords = ["tauri", "voice-to-text", "ai", "real-time", "audio-processing"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Audio capture
cpal = "0.15"

# For async audio streaming
futures = "0.3"
futures-util = "0.3"

# WebSocket for Deepgram streaming
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Audio file writing
hound = "3.5"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["multipart", "json"] }

# Keyboard simulation
enigo = "0.2"

# Date/time for timestamps
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

