[package]
name = "voice-tool"
version = "2.10.0"
description = "Transform your voice in text in real-time using AI models."
authors = ["Yohann JAFFRES <contact@yohann-jaffres.fr>"]
edition = "2021"
documentation = "https://github.com/yohannjaffres/voice-tool"
repository = "https://github.com/yohannjaffres/voice-tool"
keywords = ["tauri", "voice-to-text", "ai", "real-time", "audio-processing"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["vulkan-whisper"]
# Vulkan GPU acceleration for whisper inference.
# Enabled by default. To build without GPU (e.g. MAX_PATH issues on some Windows machines):
#   cargo check --no-default-features
#   pnpm tauri dev -- -- --no-default-features
#   pnpm tauri build -- --no-default-features
vulkan-whisper = ["whisper-rs/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Audio capture
cpal = "0.15"

# For async streaming (model downloads)
futures-util = "0.3"

# Audio file writing
hound = "3.5"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }

# Local Transcription (native whisper-rs with model caching)
whisper-rs = { version = "0.14" }
rubato = "0.15"
tauri-plugin-fs = "2"

# Keyboard simulation
enigo = "0.2"

# Windows-specific APIs (show window without activation)
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

# Date/time for timestamps
chrono = "0.4"
time = { version = "0.3", features = ["formatting"] }

# UUID generation for note IDs
uuid = { version = "1", features = ["v4"] }

# URL parsing for update channels
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
num_cpus = "1.17.0"

# Hardware detection for onboarding recommendations
sysinfo = "0.32"
wgpu = "22"
